<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Lancamentos">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:background="@color/orange_1"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txttitulol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/titPrincipal"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnhome3"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descHome"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/btnuserlanc"
        app:layout_constraintStart_toEndOf="@+id/btncat3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homemarc" />

    <ImageButton
        android:id="@+id/btncat3"
        android:layout_width="48dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="45dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descCat"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/listamarc" />

    <ImageButton
        android:id="@+id/btnlancl"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="45dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descLanc"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/btnuserlanc"
        app:layout_constraintStart_toEndOf="@+id/btncat3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rocketselect" />

    <TextView
        android:id="@+id/txtcatl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aldrich"
        android:text="@string/titCat"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btncat3"
        app:layout_constraintStart_toStartOf="@+id/btncat3"
        app:layout_constraintTop_toBottomOf="@+id/btncat3" />

    <TextView
        android:id="@+id/txtlancl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/titLanc"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnlancl"
        app:layout_constraintStart_toStartOf="@+id/btnlancl"
        app:layout_constraintTop_toBottomOf="@+id/btnlancl" />

    <TextView
        android:id="@+id/txthomel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/tithome"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnhome3"
        app:layout_constraintStart_toStartOf="@+id/btnhome3"
        app:layout_constraintTop_toBottomOf="@+id/btnhome3" />

    <TextView
        android:id="@+id/txtidl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/titLanc"
        android:textColor="@color/orange_1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <ImageButton
        android:id="@+id/btnrevil"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descRe"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtidl"
        app:srcCompat="@drawable/re8" />

    <TextView
        android:id="@+id/txtrevil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/revil"
        android:textColor="@color/orange_1"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnrevil" />

    <ImageButton
        android:id="@+id/btnuserlanc"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descuser"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/user"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnuserlanc"
        app:layout_constraintStart_toStartOf="@+id/btnuserlanc"
        app:layout_constraintTop_toBottomOf="@+id/btnuserlanc" />

</androidx.constraintlayout.widget.ConstraintLayout>
